--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <meta property="og:description"
     content="Dalam dunia fashion yang selalu berubah, 4YOU hadir sebagai merek pakaian yang tidak hanya menawarkan gaya, tetapi juga identitas. Berkomitmen untuk memberikan pilihan fashion yang unik dan berkualitas, 4YOU menjadi pilihan bagi mereka yang ingin mengekspresikan diri dengan cara yang berbeda." />
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+	    <meta name="google-site-verification" content="6m_2ltDpd66sI5eyzMKMTNSB47AmaZuyl6xfymEfm9U" />
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/linearicons.css">
         <link rel="stylesheet" href="assets/css/animate.css">
